Minor tweaks for locationAddress and locationCountry

--- a/potluck-planner/src/index.css
+++ b/potluck-planner/src/index.css
@@ -109,4 +109,8 @@ nav button {
 .formInputDiv button {
   margin: 20px 0;
 }
+
+input[type='number'] {
+  width: 70px;
+}
 /* End of Peter's Styles */
