Added and tested Yup validation to Registration form.

--- a/potluck-planner/src/index.css
+++ b/potluck-planner/src/index.css
@@ -82,6 +82,10 @@ nav button {
   text-decoration: underline;
 }
 
+.regErrorsDiv {
+  color: red;
+}
+
 .locationForm {
   width: 420px;
   margin: 20px;
