--- a/potluck-planner/src/index.css
+++ b/potluck-planner/src/index.css
@@ -82,13 +82,14 @@ nav button {
   text-decoration: underline;
 }
 
-.regErrorsDiv {
+.errorsDiv {
   color: red;
 }
 
 .locationForm {
   width: 420px;
   margin: 20px;
+  padding: 10px;
   background-color: #B4CBDE;
   border: 2px solid black;
   border-radius: 20px;
