--- a/potluck-planner/src/index.css
+++ b/potluck-planner/src/index.css
@@ -118,4 +118,29 @@ nav button {
 input[type='number'] {
   width: 70px;
 }
+
+.eventContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
+
+.eventTitleCard {
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  margin-bottom: 20px;
+  background-color: #75DAFF;
+  border: 2px solid #1338BE;
+  border-radius: 0 30px 30px 0;
+  box-shadow: 10px 10px 10px #75DAFF80;
+}
+
+.eventTitleCard p {
+  font-size: 1.2rem;
+  color: red;
+  font-weight: bold;
+}
 /* End of Peter's Styles */
