--- a/potluck-planner/src/index.css
+++ b/potluck-planner/src/index.css
@@ -123,10 +123,11 @@ input[type='number'] {
   display: flex;
   flex-direction: column;
   margin: 10px 0;
+  width: 500px
 }
 
 .eventTitleCard {
-  width: 500px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
